// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 环形定量指示器 1`] = `
<div
  className="sinoui-progress sinoui-progress--circle sinoui-progress--circle--determinate"
>
  <canvas />
</div>
`;

exports[`快照测试 线性不定量指示器 1`] = `
<div
  className="LinearProgress__Wrapper-sc-11c2xp2-0 gFUwEG sinoui-progress sinoui-progress--linear"
>
  <div
    className="sinoui-progress--linear__buffer"
  />
  <div
    className="sinoui-progress--linear__bar sinoui-progress--linear__primary-bar"
  >
    <span
      className="sinoui-progress--linear__bar-inner"
    />
  </div>
  <div
    className="sinoui-progress--linear__bar sinoui-progress--linear__secondary-bar"
  >
    <span
      className="sinoui-progress--linear__bar-inner"
    />
  </div>
</div>
`;

exports[`快照测试 线性定量指示器 1`] = `
<div
  className="LinearProgress__Wrapper-sc-11c2xp2-0 clIqbt sinoui-progress sinoui-progress--linear"
  value={50}
>
  <div
    className="sinoui-progress--linear__buffer"
  />
  <div
    className="sinoui-progress--linear__bar sinoui-progress--linear__primary-bar"
  >
    <span
      className="sinoui-progress--linear__bar-inner"
    />
  </div>
</div>
`;

exports[`快照测试 默认 1`] = `
<div
  className="DivCanvas-i30x29-0 fcvnNX sinoui-progress sinoui-progress--circle"
>
  <canvas />
</div>
`;
